			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01at: *********************************

IMP: (12/7/04, SMR) Screen sizes are computed better on multi-display systems (Bug #48)

BUG: (12/7/04, SMR) Conversin from layout to schematic is broken (Bug #56).
FIX: Fixed "ViewChanges.java" to work right.

BUG: (12/7/04, SMR) PostScript output is empty.
FIX: Make scaling factors "i" and "j" double in PostScript.start().

BUG: (12/7/04, SMR) Unexpanded cell outlines may get cut off on the right and bottom.
FIX: In PixelDrawing.expandedCellCached()" make caches wider and taller by 1.

IMP: (12/6/04, GVG) Export PNG files. Valid for EditWindow, Waveform and 3D View.

IMP: (12/6/04, DN) "TextUtils.getFileNameWithoutExtension()" returns legal
     library name with chars '\n|: {};' replaced by '-'.
     "LibraryFiles.readExternalLibraryFromFileName()" uses this name
     for library creation.

IMP: (12/5/04, SMR) Sped up drawing of highlights by doing proper clipping in Highlight.java. (Bug #51)

IMP: (12/3/04, SMR) Made Artwork Circles work properly, including problems with constraints (Layout.modFlex()),
     selection, better highlighting.

IMP/MAN: (12/3/04, SMR) Redid Layer Visibility once more; can select range of layers.

IMP: (12/3/04, GVG) TSMC90: New default size in pure p/n select nodes (Bug #54)

BUG: (12/3/04, RK) NCC: more intuitive Cell selection for cell groups having multiple layout cells (Bug #45)

IMP: (12/3/04, GVG) DRC: generating warnings if generic arcs are found in layout cells

BUG: (12/3/04, GVG) TSMC90: Active ports got wrong active arcs attached (Bug #52)
FIX: Switched to N type

BUG: (12/3/04, DN) In ELIB input technology and scale calculation is undeterministic(Bug #20).
FIX: LibraryFiles.computeTech() ensures that subcells have computed technology.

IMP: (12/3/04, DN) Technology.whatTechnology returns Artwork for text files.     
